[gd_scene load_steps=11 format=3 uid="uid://qrdx4aif6ead"]

[ext_resource type="Texture2D" uid="uid://b7jgbjio2ohms" path="res://QUIVER/images/menu.png" id="1_6oejo"]
[ext_resource type="Script" path="res://QUIVER/scripts/menu.gd" id="1_sjrdt"]
[ext_resource type="FontFile" uid="uid://dg74ql8aoubwv" path="res://QUIVER/fonts/NES.ttf" id="2_04sp7"]
[ext_resource type="Script" path="res://QUIVER/scripts/menu_item.gd" id="3_8mjol"]
[ext_resource type="PackedScene" uid="uid://dcu6cqw4of1gu" path="res://QUIVER/scenes/menu_cursor.tscn" id="3_ct8jd"]
[ext_resource type="AudioStream" uid="uid://d0vdfsccnqio" path="res://QUIVER/audio/open.wav" id="6_oal31"]
[ext_resource type="AudioStream" uid="uid://beuom5h2ycmnm" path="res://QUIVER/audio/close.wav" id="7_8f83t"]

[sub_resource type="Animation" id="Animation_6c1y7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("Open:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath("Close:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fr1kt"]
resource_name = "play"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18, 19, 22, 23, 24, 25]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Open:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Close:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_krpv2"]
_data = {
"RESET": SubResource("Animation_6c1y7"),
"play": SubResource("Animation_fr1kt")
}

[node name="Menu" type="Node2D"]
script = ExtResource("1_sjrdt")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(128, 120)
texture = ExtResource("1_6oejo")
hframes = 5
vframes = 6
frame = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_krpv2")
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 88.0
offset_top = 150.0
offset_right = 232.0
offset_bottom = 227.0
scale = Vector2(0.639998, 0.639998)

[node name="NewGame" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_04sp7")
text = "NEW GAME"
script = ExtResource("3_8mjol")

[node name="LoadGame" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_04sp7")
text = "LOAD GAME"
script = ExtResource("3_8mjol")

[node name="Quit" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_04sp7")
text = "QUIT"
script = ExtResource("3_8mjol")

[node name="MenuCursor" parent="." instance=ExtResource("3_ct8jd")]
offset_left = 72.0
offset_top = 149.0
offset_right = 84.0
offset_bottom = 161.0
menuPath = NodePath("../VBoxContainer")
offset = Vector2(10, 4)

[node name="Open" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_oal31")

[node name="Close" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_8f83t")

[connection signal="cursorSelected" from="VBoxContainer/NewGame" to="." method="_on_new_game_cursor_selected"]
[connection signal="cursorSelected" from="VBoxContainer/LoadGame" to="." method="_on_load_game_cursor_selected"]
[connection signal="cursorSelected" from="VBoxContainer/Quit" to="." method="_on_quit_cursor_selected"]
